modules/lib/src/main/java/com/github/auties00/cobalt/calls2/media/video/vpx/bindings/CobaltVpx.java

// Generated by jextract

package com.github.auties00.cobalt.calls2.media.video.vpx.bindings;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class CobaltVpx extends CobaltVpx$shared {

    CobaltVpx() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.loaderLookup()
            .or(Linker.nativeLinker().defaultLookup());

    private static final int COBALT_VPX_CODEC_VP8 = (int)0L;
    /**
     * {@snippet lang=c :
     * #define COBALT_VPX_CODEC_VP8 0
     * }
     */
    public static int COBALT_VPX_CODEC_VP8() {
        return COBALT_VPX_CODEC_VP8;
    }
    private static final int COBALT_VPX_CODEC_VP9 = (int)1L;
    /**
     * {@snippet lang=c :
     * #define COBALT_VPX_CODEC_VP9 1
     * }
     */
    public static int COBALT_VPX_CODEC_VP9() {
        return COBALT_VPX_CODEC_VP9;
    }
    private static final int COBALT_VPX_PLANE_Y = (int)0L;
    /**
     * {@snippet lang=c :
     * #define COBALT_VPX_PLANE_Y 0
     * }
     */
    public static int COBALT_VPX_PLANE_Y() {
        return COBALT_VPX_PLANE_Y;
    }
    private static final int COBALT_VPX_PLANE_U = (int)1L;
    /**
     * {@snippet lang=c :
     * #define COBALT_VPX_PLANE_U 1
     * }
     */
    public static int COBALT_VPX_PLANE_U() {
        return COBALT_VPX_PLANE_U;
    }
    private static final int COBALT_VPX_PLANE_V = (int)2L;
    /**
     * {@snippet lang=c :
     * #define COBALT_VPX_PLANE_V 2
     * }
     */
    public static int COBALT_VPX_PLANE_V() {
        return COBALT_VPX_PLANE_V;
    }
    private static final int COBALT_VPX_OK = (int)0L;
    /**
     * {@snippet lang=c :
     * #define COBALT_VPX_OK 0
     * }
     */
    public static int COBALT_VPX_OK() {
        return COBALT_VPX_OK;
    }

    private static class cobalt_vpx_encoder_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_vpx_encoder_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_create(int32_t codec, int32_t width, int32_t height, int32_t targetBitrateBps, int32_t frameRate, int32_t minQuantizer, int32_t maxQuantizer, int32_t dropframeThresh, int32_t kfMaxDist, int32_t cpuUsed, void **outCtx)
     * }
     */
    public static FunctionDescriptor cobalt_vpx_encoder_create$descriptor() {
        return cobalt_vpx_encoder_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_create(int32_t codec, int32_t width, int32_t height, int32_t targetBitrateBps, int32_t frameRate, int32_t minQuantizer, int32_t maxQuantizer, int32_t dropframeThresh, int32_t kfMaxDist, int32_t cpuUsed, void **outCtx)
     * }
     */
    public static MethodHandle cobalt_vpx_encoder_create$handle() {
        return cobalt_vpx_encoder_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_create(int32_t codec, int32_t width, int32_t height, int32_t targetBitrateBps, int32_t frameRate, int32_t minQuantizer, int32_t maxQuantizer, int32_t dropframeThresh, int32_t kfMaxDist, int32_t cpuUsed, void **outCtx)
     * }
     */
    public static MemorySegment cobalt_vpx_encoder_create$address() {
        return cobalt_vpx_encoder_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_create(int32_t codec, int32_t width, int32_t height, int32_t targetBitrateBps, int32_t frameRate, int32_t minQuantizer, int32_t maxQuantizer, int32_t dropframeThresh, int32_t kfMaxDist, int32_t cpuUsed, void **outCtx)
     * }
     */
    public static int cobalt_vpx_encoder_create(int codec, int width, int height, int targetBitrateBps, int frameRate, int minQuantizer, int maxQuantizer, int dropframeThresh, int kfMaxDist, int cpuUsed, MemorySegment outCtx) {
        var mh$ = cobalt_vpx_encoder_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_vpx_encoder_create", codec, width, height, targetBitrateBps, frameRate, minQuantizer, maxQuantizer, dropframeThresh, kfMaxDist, cpuUsed, outCtx);
            }
            return (int)mh$.invokeExact(codec, width, height, targetBitrateBps, frameRate, minQuantizer, maxQuantizer, dropframeThresh, kfMaxDist, cpuUsed, outCtx);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_vpx_encoder_reconfigure {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltVpx.C_INT,
            CobaltVpx.C_POINTER,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_vpx_encoder_reconfigure");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_reconfigure(void *ctx, int32_t width, int32_t height, int32_t targetBitrateBps, int32_t frameRate, int32_t minQuantizer, int32_t maxQuantizer, int32_t dropframeThresh, int32_t kfMaxDist, int32_t cpuUsed)
     * }
     */
    public static FunctionDescriptor cobalt_vpx_encoder_reconfigure$descriptor() {
        return cobalt_vpx_encoder_reconfigure.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_reconfigure(void *ctx, int32_t width, int32_t height, int32_t targetBitrateBps, int32_t frameRate, int32_t minQuantizer, int32_t maxQuantizer, int32_t dropframeThresh, int32_t kfMaxDist, int32_t cpuUsed)
     * }
     */
    public static MethodHandle cobalt_vpx_encoder_reconfigure$handle() {
        return cobalt_vpx_encoder_reconfigure.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_reconfigure(void *ctx, int32_t width, int32_t height, int32_t targetBitrateBps, int32_t frameRate, int32_t minQuantizer, int32_t maxQuantizer, int32_t dropframeThresh, int32_t kfMaxDist, int32_t cpuUsed)
     * }
     */
    public static MemorySegment cobalt_vpx_encoder_reconfigure$address() {
        return cobalt_vpx_encoder_reconfigure.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_reconfigure(void *ctx, int32_t width, int32_t height, int32_t targetBitrateBps, int32_t frameRate, int32_t minQuantizer, int32_t maxQuantizer, int32_t dropframeThresh, int32_t kfMaxDist, int32_t cpuUsed)
     * }
     */
    public static int cobalt_vpx_encoder_reconfigure(MemorySegment ctx, int width, int height, int targetBitrateBps, int frameRate, int minQuantizer, int maxQuantizer, int dropframeThresh, int kfMaxDist, int cpuUsed) {
        var mh$ = cobalt_vpx_encoder_reconfigure.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_vpx_encoder_reconfigure", ctx, width, height, targetBitrateBps, frameRate, minQuantizer, maxQuantizer, dropframeThresh, kfMaxDist, cpuUsed);
            }
            return (int)mh$.invokeExact(ctx, width, height, targetBitrateBps, frameRate, minQuantizer, maxQuantizer, dropframeThresh, kfMaxDist, cpuUsed);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_vpx_encoder_encode {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltVpx.C_INT,
            CobaltVpx.C_POINTER,
            CobaltVpx.C_POINTER,
            CobaltVpx.C_LONG_LONG,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_LONG_LONG,
            CobaltVpx.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_vpx_encoder_encode");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_encode(void *ctx, const uint8_t *i420, size_t len, int32_t width, int32_t height, int64_t pts, int32_t forceKeyframe)
     * }
     */
    public static FunctionDescriptor cobalt_vpx_encoder_encode$descriptor() {
        return cobalt_vpx_encoder_encode.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_encode(void *ctx, const uint8_t *i420, size_t len, int32_t width, int32_t height, int64_t pts, int32_t forceKeyframe)
     * }
     */
    public static MethodHandle cobalt_vpx_encoder_encode$handle() {
        return cobalt_vpx_encoder_encode.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_encode(void *ctx, const uint8_t *i420, size_t len, int32_t width, int32_t height, int64_t pts, int32_t forceKeyframe)
     * }
     */
    public static MemorySegment cobalt_vpx_encoder_encode$address() {
        return cobalt_vpx_encoder_encode.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_encode(void *ctx, const uint8_t *i420, size_t len, int32_t width, int32_t height, int64_t pts, int32_t forceKeyframe)
     * }
     */
    public static int cobalt_vpx_encoder_encode(MemorySegment ctx, MemorySegment i420, long len, int width, int height, long pts, int forceKeyframe) {
        var mh$ = cobalt_vpx_encoder_encode.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_vpx_encoder_encode", ctx, i420, len, width, height, pts, forceKeyframe);
            }
            return (int)mh$.invokeExact(ctx, i420, len, width, height, pts, forceKeyframe);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_vpx_encoder_get_packet {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltVpx.C_INT,
            CobaltVpx.C_POINTER,
            CobaltVpx.C_POINTER,
            CobaltVpx.C_POINTER,
            CobaltVpx.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_vpx_encoder_get_packet");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_get_packet(void *ctx, const uint8_t **outBuf, int32_t *outLen, int32_t *outIsKey)
     * }
     */
    public static FunctionDescriptor cobalt_vpx_encoder_get_packet$descriptor() {
        return cobalt_vpx_encoder_get_packet.DESC;
    }
